feature: delete shopping cart item
