# .docs/openapi.json
@@ -464,6 +464,67 @@
         ]
       }
     },
+    "/v1/shopping-cart/items/{id}": {
+      "patch": {
+        "summary": "Remover Item do Carrinho de Compras",
+        "tags": [
+          "Shopping Cart"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID do item a ser removido"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Item removido com sucesso"
+          },
+          "400": {
+            "description": "Dados inválidos",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequestErrorResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Não autorizado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnAuthorizedErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Erro interno do servidor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "x-codeSamples": [
+          {
+            "lang": "cUrl",
+            "label": "Curl",
+            "source": "curl --request DELETE \\\n  --url https://api.bompedido.app/api/v1/shopping-cart/items/{id} \\\n  --header 'X-Tenant-Id: {TENANT_ID}'"
+          }
+        ]
+      }
+    },
     "/v1/orders/{id}/approve": {
       "post": {
         "summary": "Aprovar Pedido",
